--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 body{
     height: 100vh;
     width: 100vw;
-    background: linear-gradient(90deg, rgba(65, 184, 131, 1) 0%, rgba(0, 212, 255, 1)100%);
+    background: black;
 }
 
 .board{
